--- a/StarrockGame/StarrockGame.csproj
+++ b/StarrockGame/StarrockGame.csproj
@@ -13,7 +13,7 @@
     <AssemblyName>StarrockGame</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>Windows</MonoGamePlatform>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -38,6 +38,26 @@
   <PropertyGroup>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE;WINDOWS</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="AI\IBehavior.cs" />
     <Compile Include="AI\PlayerController.cs" />
@@ -45,18 +65,37 @@
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Spaceship.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="GUI\ButtonLabel.cs" />
+    <Compile Include="GUI\GUIElement.cs" />
+    <Compile Include="GUI\ISelectable.cs" />
+    <Compile Include="GUI\Label.cs" />
+    <Compile Include="GUI\Menu.cs" />
+    <Compile Include="GUI\Table.cs" />
     <Compile Include="InputManagement\ControllerInput.cs" />
     <Compile Include="InputManagement\IInputDevice.cs" />
     <Compile Include="InputManagement\Input.cs" />
     <Compile Include="InputManagement\KeyboardInput.cs" />
     <Compile Include="InputManagement\KeyboardInputType.cs" />
+    <Compile Include="Particles\ParticleEmitter.cs" />
+    <Compile Include="Particles\ParticleSettings.cs" />
+    <Compile Include="Particles\ParticleSystem.cs" />
+    <Compile Include="Particles\ParticleVertex.cs" />
+    <Compile Include="Particles\TrailParticleSystem.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="PlayerData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SceneManagement\Scene.cs" />
     <Compile Include="SceneManagement\SceneManager.cs" />
     <Compile Include="SceneManagement\SceneState.cs" />
-    <Compile Include="SceneManagement\Scenes\SceneTest.cs" />
+    <Compile Include="SceneManagement\Scenes\SceneControls.cs" />
+    <Compile Include="SceneManagement\Scenes\SceneLeaderboard.cs" />
+    <Compile Include="SceneManagement\Scenes\ScenePause.cs" />
+    <Compile Include="SceneManagement\Scenes\ScenePrepareSession.cs" />
+    <Compile Include="SceneManagement\Scenes\SceneSession.cs" />
     <Compile Include="SceneManagement\Scenes\SceneIntro.cs" />
+    <Compile Include="SceneManagement\Scenes\SceneTitle.cs" />
+    <Compile Include="Templating\Template.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FarseerPhysics MonoGame">
