--- a/StarrockGame/StarrockGame.csproj
+++ b/StarrockGame/StarrockGame.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Caching\StarrockCacheLoader.cs" />
     <Compile Include="Entities\Asteroide.cs" />
     <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\MovementType.cs" />
     <Compile Include="Entities\Spaceship.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GUI\ButtonLabel.cs" />
