created testscene with testship and changed update signature to hold GameTime as parameter

--- a/TData/TData.csproj
+++ b/TData/TData.csproj
@@ -51,7 +51,8 @@
     <Compile Include="TemplateData\ModuleEffectData.cs" />
     <Compile Include="TemplateData\ModuleTemplateData.cs" />
     <Compile Include="TemplateData\SpaceshipTemplateData.cs" />
-    <Compile Include="TemplateData\WeaponTeamplateData.cs" />
+    <Compile Include="TemplateData\TemplateData.cs" />
+    <Compile Include="TemplateData\WeaponTemplateData.cs" />
     <Compile Include="TestData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
