--- a/StarrockGame/StarrockGame.csproj
+++ b/StarrockGame/StarrockGame.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Caching\ICacheLoader.cs" />
     <Compile Include="Caching\StarrockCacheLoader.cs" />
     <Compile Include="Entities\Asteroide.cs" />
+    <Compile Include="Entities\Engine.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\MovementType.cs" />
     <Compile Include="Entities\Spaceship.cs" />
@@ -102,8 +103,8 @@
     <Compile Include="SceneManagement\Scenes\ScenePrepareSession.cs" />
     <Compile Include="SceneManagement\Scenes\SceneSession.cs" />
     <Compile Include="SceneManagement\Scenes\SceneIntro.cs" />
+    <Compile Include="SceneManagement\Scenes\SceneTestSession.cs" />
     <Compile Include="SceneManagement\Scenes\SceneTitle.cs" />
-    <Compile Include="Templating\Template.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FarseerPhysics MonoGame, Version=3.5.0.20116, Culture=neutral, processorArchitecture=x86">
@@ -130,6 +131,9 @@
       <Project>{cfcb38b0-74ca-478f-be18-cc185079c91f}</Project>
       <Name>TData</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Templating\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
