--- a/StarrockGame/StarrockGame.csproj
+++ b/StarrockGame/StarrockGame.csproj
@@ -85,6 +85,7 @@
     <Compile Include="GUI\ISelectable.cs" />
     <Compile Include="GUI\Label.cs" />
     <Compile Include="GUI\Menu.cs" />
+    <Compile Include="GUI\Radar.cs" />
     <Compile Include="GUI\SpriteB.cs" />
     <Compile Include="GUI\Table.cs" />
     <Compile Include="InputManagement\ControllerInput.cs" />
