--- a/StarrockGame/StarrockGame.csproj
+++ b/StarrockGame/StarrockGame.csproj
@@ -109,6 +109,7 @@
     <Compile Include="SceneManagement\Scenes\SceneIntro.cs" />
     <Compile Include="SceneManagement\Scenes\SceneTestSession.cs" />
     <Compile Include="SceneManagement\Scenes\SceneTitle.cs" />
+    <Compile Include="StarrockGraphicsDeviceManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FarseerPhysics MonoGame, Version=3.5.0.20116, Culture=neutral, processorArchitecture=x86">
