added asteroid spawn

--- a/StarrockGame/StarrockGame.csproj
+++ b/StarrockGame/StarrockGame.csproj
@@ -7,7 +7,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{0E32C139-1252-4649-A409-AE1489A56282}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>StarrockGame</RootNamespace>
     <AssemblyName>StarrockGame</AssemblyName>
