added scavenging and replenishing shield

--- a/StarrockGame/StarrockGame.csproj
+++ b/StarrockGame/StarrockGame.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Entities\Engine.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\MovementType.cs" />
+    <Compile Include="Entities\Scavenging.cs" />
     <Compile Include="Entities\Spaceship.cs" />
     <Compile Include="Entities\Wreckage.cs" />
     <Compile Include="EntityManager.cs" />
