--- a/StarrockGame/StarrockGame.csproj
+++ b/StarrockGame/StarrockGame.csproj
@@ -65,7 +65,7 @@
   <ItemGroup>
     <Compile Include="AI\HaulerController.cs" />
     <Compile Include="AI\HomingController.cs" />
-    <Compile Include="AI\IBehavior.cs" />
+    <Compile Include="AI\IController.cs" />
     <Compile Include="AI\NoController.cs" />
     <Compile Include="AI\PlayerController.cs" />
     <Compile Include="Audio\GameSound.cs" />
@@ -97,16 +97,15 @@
     <Compile Include="SceneManagement\Scenes\SceneOptions.cs" />
     <Compile Include="SceneManagement\Scenes\SceneSelectResolution.cs" />
     <Compile Include="SessionDifficulty.cs" />
-    <Compile Include="GUI\ButtonLabel.cs" />
-    <Compile Include="GUI\Gauge.cs" />
-    <Compile Include="GUI\GUIElement.cs" />
+    <Compile Include="GUI\MenuElements\ButtonLabel.cs" />
+    <Compile Include="GUI\InterfaceElements\Gauge.cs" />
+    <Compile Include="GUI\MenuElements\GUIElement.cs" />
     <Compile Include="GUI\IngameInterface.cs" />
-    <Compile Include="GUI\ISelectable.cs" />
-    <Compile Include="GUI\Label.cs" />
+    <Compile Include="GUI\MenuElements\ISelectable.cs" />
+    <Compile Include="GUI\MenuElements\Label.cs" />
     <Compile Include="GUI\Menu.cs" />
-    <Compile Include="GUI\Radar.cs" />
-    <Compile Include="GUI\SpriteB.cs" />
-    <Compile Include="GUI\Table.cs" />
+    <Compile Include="GUI\InterfaceElements\Radar.cs" />
+    <Compile Include="GUI\MenuElements\Table.cs" />
     <Compile Include="InputManagement\ControllerInput.cs" />
     <Compile Include="InputManagement\IInputDevice.cs" />
     <Compile Include="InputManagement\Input.cs" />
@@ -163,9 +162,7 @@
       <Name>TData</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Templating\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
