added "starfield" and simple collision response (instant death)

--- a/StarrockGame/StarrockGame.csproj
+++ b/StarrockGame/StarrockGame.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Audio\GameSound.cs" />
     <Compile Include="Audio\StarrockSound.cs" />
     <Compile Include="Audio\Sound.cs" />
+    <Compile Include="Background.cs" />
     <Compile Include="Caching\Cache.cs" />
     <Compile Include="Caching\DefaultContentLocator.cs" />
     <Compile Include="Caching\ICacheLoader.cs" />
