--- a/StarrockGame/StarrockGame.csproj
+++ b/StarrockGame/StarrockGame.csproj
@@ -104,6 +104,7 @@
     <Compile Include="SceneManagement\Popups\PopupGameover.cs" />
     <Compile Include="SceneManagement\Popups\PopupPause.cs" />
     <Compile Include="SceneManagement\Scenes\SceneBuyModules.cs" />
+    <Compile Include="SceneManagement\Scenes\SceneCheckTemplates.cs" />
     <Compile Include="SceneManagement\Scenes\SceneOptions.cs" />
     <Compile Include="SceneManagement\Scenes\SceneSelectResolution.cs" />
     <Compile Include="SessionDifficulty.cs" />
@@ -153,7 +154,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
