--- a/StarrockGame/StarrockGame.csproj
+++ b/StarrockGame/StarrockGame.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Entities\Asteroid.cs" />
     <Compile Include="Entities\Engine.cs" />
     <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\HomingMissile.cs" />
     <Compile Include="Entities\LaserBullet.cs" />
     <Compile Include="Entities\Module.cs" />
     <Compile Include="Entities\ModuleEffectType.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="Entities\Scavenging.cs" />
     <Compile Include="Entities\Spaceship.cs" />
     <Compile Include="Entities\WeaponEntity.cs" />
+    <Compile Include="Entities\Weaponry\HomingMissileBase.cs" />
     <Compile Include="Entities\Weaponry\LaserBulletBase.cs" />
     <Compile Include="Entities\Weaponry\WeaponBase.cs" />
     <Compile Include="Entities\Weaponry\WeaponTransform.cs" />
