--- a/StarrockGame/StarrockGame.csproj
+++ b/StarrockGame/StarrockGame.csproj
@@ -107,6 +107,7 @@
     <Compile Include="GUI\MatrixMenu.cs" />
     <Compile Include="GUI\MenuElements\ButtonImage.cs" />
     <Compile Include="Line.cs" />
+    <Compile Include="ParticleSystems\ExplosionParticleSystem.cs" />
     <Compile Include="SceneManagement\Popup.cs" />
     <Compile Include="SceneManagement\Popups\PopupGameover.cs" />
     <Compile Include="SceneManagement\Popups\PopupPause.cs" />
