added simplistic 2d sound

--- a/StarrockGame/StarrockGame.csproj
+++ b/StarrockGame/StarrockGame.csproj
@@ -71,6 +71,7 @@
     <Compile Include="AI\PlayerController.cs" />
     <Compile Include="AnimatedTexture.cs" />
     <Compile Include="Audio\GameSound.cs" />
+    <Compile Include="Audio\SoundEmitter.cs" />
     <Compile Include="Audio\StarrockSound.cs" />
     <Compile Include="Audio\Sound.cs" />
     <Compile Include="Background.cs" />
