--- a/TData/TData.csproj
+++ b/TData/TData.csproj
@@ -62,6 +62,7 @@
     <Compile Include="TemplateData\WeaponTemplate.cs" />
     <Compile Include="TemplateData\WreckageTemplate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TemplateType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
