--- a/StarrockGame/StarrockGame.csproj
+++ b/StarrockGame/StarrockGame.csproj
@@ -63,6 +63,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AI\AbstractController.cs" />
     <Compile Include="AI\DestroyerController.cs" />
     <Compile Include="AI\HaulerController.cs" />
     <Compile Include="AI\HomingController.cs" />
